<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirHockey</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="quit">Quit</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="match_history">Match History</string>
    <string name="player_1_name_view">Player 1 Name</string>
    <string name="player_2_name_view">Player 2 Name</string>
    <string name="player_1_name_input">Name</string>
    <string name="player_2_name_input">Name</string>
    <string name="goals_to_win">Goals to win:</string>
    <string name="goal_view">5</string>
    <string name="start_button">Start</string>
    <string name="size_mallet">Size of the mallets</string>
    <string name="speed">Speed</string>
    <string name="size_puck">Size of the puck</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="title_header_description">Header for the title screen</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="history_dialog_prompt">Delete this match?</string>
    <string name="main_menu_button">Main Menu</string>
    <string name="rematch_button">Rematch</string>

</resources>