<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/title_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title_header_description"
        android:src="@drawable/airhockey_title2" />

    <ImageButton
        android:background="@drawable/selector_new_game"
        android:id="@+id/title_new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/new_game" />

    <ImageButton
        android:background="@drawable/selector_match_history"
        android:id="@+id/title_match_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/match_history" />

    <ImageButton
        android:background="@drawable/selector_settings"
        android:id="@+id/title_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/settings" />

    <ImageButton
        android:background="@drawable/selector_quit"
        android:id="@+id/title_quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/quit" />

</LinearLayout>